crates/math-core/src/snapshots/math_core__parser__tests__mspace.snap
---
source: crates/math-core/src/parser.rs
expression: "\\mspace{1mu}"
---
[
  Space(Length(
    value: 0.055555556,
    unit: Em,
  )),
]
