crates/math-core/src/snapshots/math_core__parser__tests__number_after_overbrace.snap
---
source: crates/math-core/src/parser.rs
expression: "\\overbrace12"
---
[
  OverAccent("⏞", OpAttrs(""), Number("1")),
  Number("2"),
]
