crates/math-core/src/snapshots/math_core__parser__tests__number_after_underscore.snap
---
source: crates/math-core/src/parser.rs
expression: x_12
---
[
  Sub(
    target: IdentifierChar("x", Default),
    symbol: Number("1"),
  ),
  Number("2"),
]
