crates/math-core/src/snapshots/math_core__parser__tests__number_with_dot_and_letter.snap
---
source: crates/math-core/src/parser.rs
expression: 4.x
---
[
  Number("4"),
  IdentifierChar(".", Default),
  IdentifierChar("x", Default),
]
