crates/math-core/src/snapshots/math_core__parser__tests__number_with_dot_at_end.snap
---
source: crates/math-core/src/parser.rs
expression: 3.14.
---
[
  Number("3.14"),
  IdentifierChar(".", Default),
]
