crates/math-core/src/snapshots/math_core__parser__tests__number_with_spaces_in_text.snap
---
source: crates/math-core/src/parser.rs
expression: "\\text{1 2  3    4}"
---
[
  Text(
    text_style: None,
    text_size: None,
    text_voffset: None,
    text: "1\u{a0}2\u{a0}3\u{a0}4",
  ),
]
