crates/math-core/src/snapshots/math_core__parser__tests__number_with_spaces_with_dots.snap
---
source: crates/math-core/src/parser.rs
expression: "1 2. 3  ,  4"
---
[
  Number("12.3"),
  Operator(
    op: ",",
    attrs: OpAttrs(""),
    roles: OpRoles(""),
    size: None,
    left: None,
    right: None,
  ),
  Number("4"),
]
