crates/math-core/src/snapshots/math_core__parser__tests__number_with_two_inner_dots.snap
---
source: crates/math-core/src/parser.rs
expression: 3..14
---
[
  Number("3"),
  IdentifierChar(".", Default),
  IdentifierChar(".", Default),
  Number("14"),
]
