crates/math-core/src/snapshots/math_core__parser__tests__operatorname_number.snap
---
source: crates/math-core/src/parser.rs
expression: "\\operatorname123"
---
[
  PseudoOp(
    left: Some(Zero),
    right: Some(ThreeMu),
    name: "1",
  ),
  Number("23"),
]
