crates/math-core/src/snapshots/math_core__parser__tests__overset_digits.snap
---
source: crates/math-core/src/parser.rs
expression: "\\overset12"
---
[
  Over(
    symbol: Number("1"),
    target: Number("2"),
  ),
]
